iterate on docs, make id refs in schema
