# src/models/cluster_namespaces_inner.rs
@@ -12,20 +12,12 @@ use serde::{Deserialize, Serialize};
 
 #[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
 pub struct ClusterNamespacesInner {
-    #[serde(rename = "annotations", skip_serializing_if = "Option::is_none")]
-    pub annotations: Option<std::collections::HashMap<String, String>>,
     #[serde(rename = "id")]
     pub id: String,
-    #[serde(rename = "labels", skip_serializing_if = "Option::is_none")]
-    pub labels: Option<std::collections::HashMap<String, String>>,
 }
 
 impl ClusterNamespacesInner {
     pub fn new(id: String) -> ClusterNamespacesInner {
-        ClusterNamespacesInner {
-            annotations: None,
-            id,
-            labels: None,
-        }
+        ClusterNamespacesInner { id }
     }
 }
