# src/models/cluster_rolebindings_inner.rs
@@ -1,31 +1,0 @@
-/*
- * Flux ResourceSet Internal API
- *
- * Internal API for Flux phone-home read-only and CRUD operations
- *
- * The version of the OpenAPI document: 2.0
- *
- * Generated by: https://openapi-generator.tech
- */
-
-use serde::{Deserialize, Serialize};
-
-#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
-pub struct ClusterRolebindingsInner {
-    #[serde(rename = "id")]
-    pub id: String,
-    #[serde(rename = "role")]
-    pub role: String,
-    #[serde(rename = "subjects")]
-    pub subjects: Vec<std::collections::HashMap<String, serde_json::Value>>,
-}
-
-impl ClusterRolebindingsInner {
-    pub fn new(
-        id: String,
-        role: String,
-        subjects: Vec<std::collections::HashMap<String, serde_json::Value>>,
-    ) -> ClusterRolebindingsInner {
-        ClusterRolebindingsInner { id, role, subjects }
-    }
-}
